--- a/keycloak/.env.example
+++ b/keycloak/.env.example
@@ -6,6 +6,4 @@ DB_PASSWORD=
 KEYCLOAK_USER=
 KEYCLOAK_PASSWORD=
 JDBC_PARAMS=
-VIRTUAL_PORT=
-VIRTUAL_HOST=
-NETWORK=nginx-proxy
+VIRTUAL_HOST=keycloak.lan
