--- a/rabbitmq/docker-compose.yml
+++ b/rabbitmq/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3.2"
 services:
   rabbitmq:
     image: rabbitmq:3-management-alpine
-    container_name: 'rabbitmq'
+    container_name: 'events-rabbitmq'
     restart: unless-stopped
     environment: 
-      VIRTUAL_HOST: "rabbitmq.lan"
+      VIRTUAL_HOST: ${VIRTUAL_HOST}
       VIRTUAL_PORT: "15672"
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
@@ -13,7 +13,7 @@ services:
         - 5672:5672
         - 15672:15672
     volumes:
-        - ./data:/var/lib/rabbitmq/
+        - storage-rabbitmq:/var/lib/rabbitmq/
         - ./log:/var/log/rabbitmq
     networks:
       - network-nginx-lan
@@ -27,3 +27,5 @@ networks:
   network-events:
     external:
       name: network-events
+volumes:
+  storage-rabbitmq:
