--- a/rabbitmq/.env.example
+++ b/rabbitmq/.env.example
@@ -1,11 +1,2 @@
-DB_VENDOR=
-DB_ADDR=
-DB_DATABASE=
-DB_USER=
-DB_PASSWORD=
-KEYCLOAK_USER=
-KEYCLOAK_PASSWORD=
-JDBC_PARAMS=
-VIRTUAL_PORT=
-VIRTUAL_HOST=
-NETWORK=nginx-proxy
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
